zkay/examples/type_errors/MappingToOther.zkay
pragma zkay >=0.2.0;

contract MappingToOther {

    mapping(address!x => uint@x) values;


	function f(address a, uint@me value) public {
		values[a] = value;
	}

}
